Fixing grid scroll bar alignment

--- a/projects/cpm-app/src/app/shared/components/grid-popup/grid-popup.component.scss
+++ b/projects/cpm-app/src/app/shared/components/grid-popup/grid-popup.component.scss
@@ -92,6 +92,7 @@
     .grid-body {
       display: grid;
       overflow-y: auto;
+      overflow-x: hidden;
       grid-auto-rows: 30px;
       height: calc(100% - 30px);
 
